syntax = "proto3";

option go_package = "github.com/poommu-sp/public-exim-grpc-protocol/samantra/services/rm2_services/warehouse;warehouse";

package samantra.services.rm2.warehouse;

import "samantra/common/common.proto";

message Warehouse {
  string lot_no = 1;
  string product_code = 2;
  int64 plant_id = 3;
  int64 age = 4;
  common.Amount total = 5;
  repeated common.PlantQuantity quantities = 6;
}
